@startuml DeepSleep Database Schema

title DeepSleep Investment Management System - Database Schema

entity "assets" as ASSETS {
    * id : INT (AUTO_INCREMENT)
    --
    * asset_id : VARCHAR(50)
    * asset_name : VARCHAR(100)
    open_price : FLOAT
    high_price : FLOAT
    low_price : FLOAT
    close_price : FLOAT
    category : VARCHAR(50)
    data_date : DATE
}

entity "portfolio" as PORTFOLIO {
    * id : INT (AUTO_INCREMENT)
    --
    * portfolio_name : VARCHAR(100)
    * user_id : INT
    asset_id : VARCHAR(50)
    quantity : INT
}

entity "user_info" as USER_INFO {
    * user_id : INT (AUTO_INCREMENT)
    --
    * user_name : VARCHAR(100)
    available_funds : FLOAT
}

' Relationships
USER_INFO ||--o{ PORTFOLIO : "user_id"
ASSETS ||--o{ PORTFOLIO : "asset_id"

note right of ASSETS
  Stores historical price data
  for stocks, bonds, and cash
  with daily OHLC prices
end note

note right of PORTFOLIO
  Tracks user holdings
  across different portfolios
  with quantities
end note

note right of USER_INFO
  Stores user account
  information and available
  funds for trading
end note

' Sample Data Examples
note bottom of ASSETS
  Example records:
  - AAPL, Apple Inc., 150.50, 152.75, 149.25, 151.80, 科技, 2023-05-01
  - GOOGL, Google A类股, 105.75, 107.20, 104.50, 106.30, 科技, 2023-05-01
  - TSLA, Tesla, 165.40, 168.90, 162.30, 166.75, 科技, 2023-05-01
end note

note bottom of PORTFOLIO
  Example records:
  - 科技爱好者, 1, AAPL, 10
  - 科技爱好者, 1, GOOGL, 5
  - 稳健投资, 1, TSLA, 8
end note

note bottom of USER_INFO
  Example records:
  - 1, 张三, 50000.0
  - 2, 李四, 75000.0
end note

@enduml 